--- a/MODELS’ EVALUATION/RollingMean.ipynb
+++ b/MODELS’ EVALUATION/RollingMean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,68 +74,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "prd_series\n",
-      "index\n",
-      "RangeIndex(start=0, stop=19, step=1)\n",
-      "X\n",
-      "index 2\n",
-      "DatetimeIndex(['2020-06-01', '2020-07-01', '2020-08-01', '2020-09-01',\n",
-      "               '2020-10-01', '2020-11-01', '2020-12-01', '2021-01-01',\n",
-      "               '2021-02-01', '2021-03-01', '2021-04-01', '2021-05-01',\n",
-      "               '2021-06-01', '2021-07-01', '2021-08-01', '2021-09-01',\n",
-      "               '2021-10-01', '2021-11-01', '2021-12-01'],\n",
-      "              dtype='datetime64[ns]', name='Date', freq=None)\n",
-      "prd_series\n",
-      "index\n",
-      "RangeIndex(start=0, stop=19, step=1)\n",
-      "X\n",
-      "index 2\n",
-      "DatetimeIndex(['2020-06-01', '2020-07-01', '2020-08-01', '2020-09-01',\n",
-      "               '2020-10-01', '2020-11-01', '2020-12-01', '2021-01-01',\n",
-      "               '2021-02-01', '2021-03-01', '2021-04-01', '2021-05-01',\n",
-      "               '2021-06-01', '2021-07-01', '2021-08-01', '2021-09-01',\n",
-      "               '2021-10-01', '2021-11-01', '2021-12-01'],\n",
-      "              dtype='datetime64[ns]', name='Date', freq=None)\n",
-      "prd_series\n",
-      "index\n",
-      "RangeIndex(start=0, stop=19, step=1)\n",
-      "X\n",
-      "index 2\n",
-      "DatetimeIndex(['2020-06-01', '2020-07-01', '2020-08-01', '2020-09-01',\n",
-      "               '2020-10-01', '2020-11-01', '2020-12-01', '2021-01-01',\n",
-      "               '2021-02-01', '2021-03-01', '2021-04-01', '2021-05-01',\n",
-      "               '2021-06-01', '2021-07-01', '2021-08-01', '2021-09-01',\n",
-      "               '2021-10-01', '2021-11-01', '2021-12-01'],\n",
-      "              dtype='datetime64[ns]', name='Date', freq=None)\n",
-      "prd_series\n",
-      "index\n",
-      "RangeIndex(start=0, stop=19, step=1)\n",
-      "X\n",
-      "index 2\n",
-      "DatetimeIndex(['2020-06-01', '2020-07-01', '2020-08-01', '2020-09-01',\n",
-      "               '2020-10-01', '2020-11-01', '2020-12-01', '2021-01-01',\n",
-      "               '2021-02-01', '2021-03-01', '2021-04-01', '2021-05-01',\n",
-      "               '2021-06-01', '2021-07-01', '2021-08-01', '2021-09-01',\n",
-      "               '2021-10-01', '2021-11-01', '2021-12-01'],\n",
-      "              dtype='datetime64[ns]', name='Date', freq=None)\n",
-      "prd_series\n",
-      "index\n",
-      "RangeIndex(start=0, stop=0, step=1)\n",
-      "X\n",
-      "index 2\n",
-      "DatetimeIndex(['2020-06-01', '2020-07-01', '2020-08-01', '2020-09-01',\n",
-      "               '2020-10-01', '2020-11-01', '2020-12-01', '2021-01-01',\n",
-      "               '2021-02-01', '2021-03-01', '2021-04-01', '2021-05-01',\n",
-      "               '2021-06-01', '2021-07-01', '2021-08-01', '2021-09-01',\n",
-      "               '2021-10-01', '2021-11-01', '2021-12-01'],\n",
-      "              dtype='datetime64[ns]', name='Date', freq=None)\n"
+      "0    -12.4\n",
+      "1    -12.4\n",
+      "2    -12.4\n",
+      "3    -12.4\n",
+      "4    -12.4\n",
+      "5    -12.4\n",
+      "6    -12.4\n",
+      "7    -12.4\n",
+      "8    -12.4\n",
+      "9    -12.4\n",
+      "10   -12.4\n",
+      "11   -12.4\n",
+      "12   -12.4\n",
+      "13   -12.4\n",
+      "14   -12.4\n",
+      "15   -12.4\n",
+      "16   -12.4\n",
+      "17   -12.4\n",
+      "18   -12.4\n",
+      "dtype: float64\n",
+      "0    -4.3625\n",
+      "1    -4.3625\n",
+      "2    -4.3625\n",
+      "3    -4.3625\n",
+      "4    -4.3625\n",
+      "5    -4.3625\n",
+      "6    -4.3625\n",
+      "7    -4.3625\n",
+      "8    -4.3625\n",
+      "9    -4.3625\n",
+      "10   -4.3625\n",
+      "11   -4.3625\n",
+      "12   -4.3625\n",
+      "13   -4.3625\n",
+      "14   -4.3625\n",
+      "15   -4.3625\n",
+      "16   -4.3625\n",
+      "17   -4.3625\n",
+      "18   -4.3625\n",
+      "dtype: float64\n",
+      "0    -2.24375\n",
+      "1    -2.24375\n",
+      "2    -2.24375\n",
+      "3    -2.24375\n",
+      "4    -2.24375\n",
+      "5    -2.24375\n",
+      "6    -2.24375\n",
+      "7    -2.24375\n",
+      "8    -2.24375\n",
+      "9    -2.24375\n",
+      "10   -2.24375\n",
+      "11   -2.24375\n",
+      "12   -2.24375\n",
+      "13   -2.24375\n",
+      "14   -2.24375\n",
+      "15   -2.24375\n",
+      "16   -2.24375\n",
+      "17   -2.24375\n",
+      "18   -2.24375\n",
+      "dtype: float64\n",
+      "0    -2.10625\n",
+      "1    -2.10625\n",
+      "2    -2.10625\n",
+      "3    -2.10625\n",
+      "4    -2.10625\n",
+      "5    -2.10625\n",
+      "6    -2.10625\n",
+      "7    -2.10625\n",
+      "8    -2.10625\n",
+      "9    -2.10625\n",
+      "10   -2.10625\n",
+      "11   -2.10625\n",
+      "12   -2.10625\n",
+      "13   -2.10625\n",
+      "14   -2.10625\n",
+      "15   -2.10625\n",
+      "16   -2.10625\n",
+      "17   -2.10625\n",
+      "18   -2.10625\n",
+      "dtype: float64\n",
+      "Series([], dtype: object)\n"
      ]
     },
     {
@@ -145,9 +171,9 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[31], line 17\u001b[0m\n\u001b[1;32m     14\u001b[0m train, test \u001b[38;5;241m=\u001b[39m series_train_test_split(data, trn_pct\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.90\u001b[39m)\n\u001b[1;32m     16\u001b[0m fig \u001b[38;5;241m=\u001b[39m figure(figsize\u001b[38;5;241m=\u001b[39m(HEIGHT, HEIGHT))\n\u001b[0;32m---> 17\u001b[0m best_model, best_params \u001b[38;5;241m=\u001b[39m \u001b[43mrolling_mean_study\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtest\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     18\u001b[0m savefig(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/home/mina/Documents/portugal/dataScience/Data_science_project/MODELS’ EVALUATION/images_rolling/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile_tag\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_rollingmean_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmeasure\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_study.png\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[26], line 16\u001b[0m, in \u001b[0;36mrolling_mean_study\u001b[0;34m(train, test, measure)\u001b[0m\n\u001b[1;32m     14\u001b[0m pred \u001b[38;5;241m=\u001b[39m RollingMeanRegressor(win\u001b[38;5;241m=\u001b[39mw)\n\u001b[1;32m     15\u001b[0m pred\u001b[38;5;241m.\u001b[39mfit(train)\n\u001b[0;32m---> 16\u001b[0m prd_tst \u001b[38;5;241m=\u001b[39m \u001b[43mpred\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpredict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtest\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28meval\u001b[39m: \u001b[38;5;28mfloat\u001b[39m \u001b[38;5;241m=\u001b[39m FORECAST_MEASURES[measure](test, prd_tst)\n\u001b[1;32m     19\u001b[0m \u001b[38;5;66;03m# print(w, eval)\u001b[39;00m\n",
-      "Cell \u001b[0;32mIn[25], line 29\u001b[0m, in \u001b[0;36mRollingMeanRegressor.predict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mindex 2\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28mprint\u001b[39m(X\u001b[38;5;241m.\u001b[39mindex)\n\u001b[0;32m---> 29\u001b[0m \u001b[43mprd_series\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mindex\u001b[49m \u001b[38;5;241m=\u001b[39m X\u001b[38;5;241m.\u001b[39mindex\n\u001b[1;32m     30\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m prd_series\n",
+      "Cell \u001b[0;32mIn[34], line 17\u001b[0m\n\u001b[1;32m     14\u001b[0m train, test \u001b[38;5;241m=\u001b[39m series_train_test_split(data, trn_pct\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.90\u001b[39m)\n\u001b[1;32m     16\u001b[0m fig \u001b[38;5;241m=\u001b[39m figure(figsize\u001b[38;5;241m=\u001b[39m(HEIGHT, HEIGHT))\n\u001b[0;32m---> 17\u001b[0m best_model, best_params \u001b[38;5;241m=\u001b[39m \u001b[43mrolling_mean_study\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtest\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     18\u001b[0m savefig(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/home/mina/Documents/portugal/dataScience/Data_science_project/MODELS’ EVALUATION/images_rolling/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile_tag\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_rollingmean_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmeasure\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_study.png\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[33], line 16\u001b[0m, in \u001b[0;36mrolling_mean_study\u001b[0;34m(train, test, measure)\u001b[0m\n\u001b[1;32m     14\u001b[0m pred \u001b[38;5;241m=\u001b[39m RollingMeanRegressor(win\u001b[38;5;241m=\u001b[39mw)\n\u001b[1;32m     15\u001b[0m pred\u001b[38;5;241m.\u001b[39mfit(train)\n\u001b[0;32m---> 16\u001b[0m prd_tst \u001b[38;5;241m=\u001b[39m \u001b[43mpred\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpredict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtest\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28meval\u001b[39m: \u001b[38;5;28mfloat\u001b[39m \u001b[38;5;241m=\u001b[39m FORECAST_MEASURES[measure](test, prd_tst)\n\u001b[1;32m     19\u001b[0m \u001b[38;5;66;03m# print(w, eval)\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[32], line 24\u001b[0m, in \u001b[0;36mRollingMeanRegressor.predict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m     22\u001b[0m prd_series: Series \u001b[38;5;241m=\u001b[39m Series(estimations[\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mwin_size :])\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28mprint\u001b[39m(prd_series)\n\u001b[0;32m---> 24\u001b[0m \u001b[43mprd_series\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mindex\u001b[49m \u001b[38;5;241m=\u001b[39m X\u001b[38;5;241m.\u001b[39mindex\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m prd_series\n",
       "File \u001b[0;32m~/.local/lib/python3.12/site-packages/pandas/core/generic.py:6313\u001b[0m, in \u001b[0;36mNDFrame.__setattr__\u001b[0;34m(self, name, value)\u001b[0m\n\u001b[1;32m   6311\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m   6312\u001b[0m     \u001b[38;5;28mobject\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__getattribute__\u001b[39m(\u001b[38;5;28mself\u001b[39m, name)\n\u001b[0;32m-> 6313\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mobject\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__setattr__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   6314\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m:\n\u001b[1;32m   6315\u001b[0m     \u001b[38;5;28;01mpass\u001b[39;00m\n",
       "File \u001b[0;32mproperties.pyx:69\u001b[0m, in \u001b[0;36mpandas._libs.properties.AxisProperty.__set__\u001b[0;34m()\u001b[0m\n",
       "File \u001b[0;32m~/.local/lib/python3.12/site-packages/pandas/core/generic.py:814\u001b[0m, in \u001b[0;36mNDFrame._set_axis\u001b[0;34m(self, axis, labels)\u001b[0m\n\u001b[1;32m    809\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    810\u001b[0m \u001b[38;5;124;03mThis is called from the cython code when we set the `index` attribute\u001b[39;00m\n\u001b[1;32m    811\u001b[0m \u001b[38;5;124;03mdirectly, e.g. `series.index = [1, 2, 3]`.\u001b[39;00m\n\u001b[1;32m    812\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    813\u001b[0m labels \u001b[38;5;241m=\u001b[39m ensure_index(labels)\n\u001b[0;32m--> 814\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_mgr\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mset_axis\u001b[49m\u001b[43m(\u001b[49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlabels\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    815\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_clear_item_cache()\n",
