encore plus de photo

--- a/MODELS’ EVALUATION/RollingMean.ipynb
+++ b/MODELS’ EVALUATION/RollingMean.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -197,10 +197,10 @@
     "from matplotlib.pyplot import figure, savefig\n",
     "from dslabs_functions import series_train_test_split, plot_forecasting_eval, plot_forecasting_series, HEIGHT\n",
     "\n",
-    "filename: str = \"/home/mina/Documents/portugal/dataScience/set_1_diff_twice.csv\"\n",
-    "file_tag: str = \"Set 1\"\n",
-    "target: str = \"Manhattan\"\n",
-    "timecol: str = \"Date\"\n",
+    "filename: str = \"/home/mina/Documents/portugal/dataScience/set_2_diff_twice.csv\"\n",
+    "file_tag: str = \"Set 2\"\n",
+    "target: str = \"GDP\"\n",
+    "timecol: str = \"Year\"\n",
     "measure: str = \"R2\"\n",
     "\n",
     "data: DataFrame = read_csv(filename, index_col=timecol, sep=\",\", decimal=\".\", parse_dates=True)\n",
