--- a/MODELS’ EVALUATION/LSTM.ipynb
+++ b/MODELS’ EVALUATION/LSTM.ipynb
@@ -64,10 +64,10 @@
     "from pandas import read_csv, DataFrame, Series\n",
     "from dslabs_functions import series_train_test_split\n",
     "\n",
-    "filename: str = \"/home/mina/Documents/portugal/dataScience/Data_science_project/forecast_gdp_europe.csv\"\n",
-    "file_tag: str = \"Set 2 multiple variables\"\n",
-    "target: str = \"GDP\"\n",
-    "timecol: str = \"Year\"\n",
+    "filename: str = \"/home/mina/Documents/portugal/dataScience/Data_science_project/forecast_ny_arrests.csv\"\n",
+    "file_tag: str = \"Set  multiple variables\"\n",
+    "target: str = \"Manhattan\"\n",
+    "timecol: str = \"Date\"\n",
     "\n",
     "measure: str = \"MAE\"\n",
     "\n",
